--- a/project.config.json
+++ b/project.config.json
@@ -25,7 +25,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.11.0",
-	"appid": "wxdc9ea053424f2db0",
+	"appid": "wxa7174b9e45716c67",
 	"projectname": "WXBilibiliSmallDemo",
 	"debugOptions": {
 		"hidedInDevtools": []
